# rinha-2024-q1-rust

./: Cargo.toml  Dockerfile  ddl.sql  docker-compose.arm64.yml  docker-compose.yml  nginx-arm64.conf  nginx.conf  run-arm64.sh  run.sh
src/: database.rs  main.rs  models.rs
