[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rinha"
path = "src/main.rs"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros", "json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
